--- a/pyVerein/app/locale/de/LC_MESSAGES/django.po
+++ b/pyVerein/app/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-12 00:39+0200\n"
+"POT-Creation-Date: 2018-07-12 01:00+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -64,14 +64,16 @@ msgid "Cost objects"
 msgstr "Kostenträger"
 
 #: app/templates/app/_drawer.html:72
-#, fuzzy
-#| msgid "Username"
 msgid "User"
 msgstr "Benutzer"
 
 #: app/templates/app/_drawer.html:77
 msgid "Profile"
 msgstr "Profil"
+
+#: app/templates/app/dashboard.html:10 app/templates/app/dashboard.html:14
+msgid "Dashboard"
+msgstr "Dashboard"
 
 #: app/templates/registration/login.html:31
 #: app/templates/registration/login.html:101
