--- a/pyVerein/account/locale/de/LC_MESSAGES/django.po
+++ b/pyVerein/account/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-28 16:55+0200\n"
+"POT-Creation-Date: 2018-07-28 17:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -21,6 +21,35 @@ msgstr ""
 #: forms.py:12
 msgid "Reset profile image"
 msgstr "Profilbild zurücksetzen"
+
+#: templates/account/change_password.html:7
+#: templates/account/change_password.html:11
+#: templates/account/change_password.html:36
+#: templates/account/user_detail.html:47
+msgid "Change password"
+msgstr "Passwort ändern"
+
+#: templates/account/change_password.html:21
+#: templates/account/user_detail.html:44
+msgid "Password"
+msgstr "Passwort"
+
+#: templates/account/change_password.html:24
+msgid "Old password"
+msgstr "Akutelles Passwort"
+
+#: templates/account/change_password.html:28
+msgid "New password"
+msgstr "Neues Passwort"
+
+#: templates/account/change_password.html:32
+msgid "Confirm password"
+msgstr "Passwort bestätigen"
+
+#: templates/account/change_password.html:37
+#: templates/account/user_edit.html:54
+msgid "Cancel"
+msgstr "Abbrechen"
 
 #: templates/account/user_detail.html:6 templates/account/user_detail.html:10
 #: templates/account/user_edit.html:7 templates/account/user_edit.html:11
@@ -47,14 +76,6 @@ msgstr "Benutzername"
 msgid "Email"
 msgstr "E-Mail"
 
-#: templates/account/user_detail.html:44
-msgid "Password"
-msgstr "Passwort"
-
-#: templates/account/user_detail.html:47
-msgid "Change password"
-msgstr "Passwort ändern"
-
 #: templates/account/user_detail.html:50
 msgid "Additional information"
 msgstr "Zusätzliche Informationen"
@@ -75,6 +96,6 @@ msgstr "Bearbeiten"
 msgid "Save"
 msgstr "Speichern"
 
-#: templates/account/user_edit.html:54
-msgid "Cancel"
-msgstr "Abbrechen"
+#: views.py:48
+msgid "Your password was successfully updated!"
+msgstr "Passwort wurde erfolgreich geändert"
