--- a/pyVerein/utils/locale/de/LC_MESSAGES/django.po
+++ b/pyVerein/utils/locale/de/LC_MESSAGES/django.po
@@ -16,11 +16,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: pyVerein/settings/base.py:117
-msgid "English"
-msgstr "Englisch"
-
-#: pyVerein/settings/base.py:118
-msgid "German"
-msgstr "Deutsch"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+#: utils/widgets.py:6
+msgid "Clear"
+msgstr "Löschen"
